# weather

./: .gitignore  LICENSE  README.md  examples.py  setup.py
python/: .gitignore  README.md
python/py_gui/: README.md  main.py  pyproject.toml  tk_tester.py
python/py_gui/py_gui/: __init__.py  app.py  metadata.py
python/py_gui/py_gui/config/: __init__.py  weather_log.py
python/py_gui/py_gui/config/colors/: __init__.py  color.py
python/py_gui/py_gui/config/settings/: __init__.py  defaults.yaml  weather_settings.py
python/py_gui/py_gui/domain/: __init__.py  weather_data.py
python/py_gui/py_gui/tk_weather/: __init__.py  about.py  add_history.py  add_location.py  city_search.py  history_dates.py  history_report.py  history_summary.py  infrastructure.py  locations.py  tk_weather.py
python/py_gui/py_gui/tk_weather/history_graph/: __init__.py  graph_selector.py  graph_view.py  graphs.py  history_graph.py
python/py_gui/py_gui/tk_weather/widgets/: __init__.py  date_range_selector.py  locations_view.py
python/py_gui/py_gui/tk_weather/widgets/sheet/: __init__.py  cell.py  color.py  data.py  pad.py  rect.py  renderer.py  row.py  scroller.py  sheet.py  text.py  view.py
python/py_tui/: .gitignore  README.md  main.py  pyproject.toml
python/py_tui/py_tui/: __init__.py  date_select.py  history_app.py  history_report.py  history_view.py  location_details.py  metadata.py
rust/weather/: .gitignore  Cargo.toml  README.md
rust/weather/cli/: Cargo.toml  README.md
rust/weather/cli/src/: cli.rs  main.rs
rust/weather/cli/src/cli/: admin.rs  reports.rs  tui.rs  user.rs
rust/weather/cli/src/cli/admin/: drop.rs  init.rs  reload.rs  show.rs  us_cities.rs
rust/weather/cli/src/cli/reports/: list_history.rs  list_locations.rs  list_states.rs  list_summary.rs  report_history.rs
rust/weather/cli/src/cli/tui/: app.rs  dialogs.rs  histories_win.rs  locations_win.rs  summary_win.rs
rust/weather/cli/src/cli/tui/dialogs/: add_location.rs  location_search.rs
rust/weather/cli/src/cli/tui/locations_win/: add_history.rs  context_menu.rs  report.rs
rust/weather/cli/src/cli/user/: add_history.rs  list_history.rs  list_locations.rs  list_summary.rs  query_cities.rs  query_states.rs  report_history.rs
rust/weather/lib/: Cargo.toml  README.md
rust/weather/lib/resources/tests/config/: some_weather.toml
rust/weather/lib/resources/tests/db/: locations.json
rust/weather/lib/resources/tests/filesys/: locations.json
rust/weather/lib/src/: admin.rs  backend.rs  entities.rs  history_client.rs  lib.rs  weather_data.rs
rust/weather/lib/src/backend/: admin.rs  config.rs  db.rs  filesys.rs
rust/weather/lib/src/backend/db/: admin.rs  sqlite.rs
rust/weather/lib/src/backend/db/sqlite/: admin.rs  drop.sql  history.rs  locations.rs  metadata.rs  schema.sql  us_cities.rs
rust/weather/lib/src/backend/filesys/: admin.rs  history.rs  history_archive.rs  locations.rs  weather_dir.rs  weather_file.rs
rust/weather/lib/src/backend/filesys/history_archive/: archive_file.rs
rust/weather/lib/src/backend/filesys/locations/: locations_file.rs  validate.rs
rust/weather/lib/src/history_client/: response.json  rest_client.rs  timeline_client.rs
rust/weather/py_lib/: Cargo.toml  README.md  py_weather_lib.pyi  pyproject.toml
rust/weather/py_lib/src/: lib.rs  py_entities.rs  py_history_client.rs  py_weather_data.rs
rust/weather/termui/: Cargo.toml  README.md
rust/weather/termui/src/: console.rs  controls.rs  dialogs.rs  lib.rs  menus.rs  styles.rs
rust/weather/termui/src/controls/: button.rs  checkbox.rs  label.rs  report_view.rs  text.rs
rust/weather/termui/src/controls/text/: date_editor.rs  text_editor.rs
rust/weather/termui/src/dialogs/: modal.rs  tabbed.rs
rust/weather/termui/src/dialogs/modal/: button.rs  menu.rs  message.rs  progress.rs
rust/weather/termui/src/menus/: dropdown.rs  menubar.rs  menuitem.rs  popup.rs
rust/weather/termui/src/styles/: catalogs.rs
rust/weather/termui/src/styles/catalogs/: bootstrap.rs  persistence.rs  store.rs
(+57 files in other folders)
