[workspace]
resolver = "2"

members = [
    "cli",
    "lib",
    "py_lib",
    "termui",
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
# 0.10.0 has introduced more changes that break the build
#chrono-tz = { version = "0.10.0", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
log = "0.4"
rusqlite = { version = "0.32.1", features = ["blob", "bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
toolslib = { path = "../toolslib" }
crossterm = "0.28.1"
ratatui = { version = "0.28.0", features = ["all-widgets", "serde"] }
