[package]
name = "termui_lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toolslib.workspace = true
strum = { version = "0.26", features = ["derive"]}

[dev-dependencies]
rand = "0.8.5"

[features]
log_key_event = []
log_render = []
